<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/starwars_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_grid_size"
            android:gravity="center"
            android:text="@string/test_message"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_margin="@dimen/double_grid_size"
            android:elevation="@dimen/base_elevation"
            android:visibility="gone"
            app:cardBackgroundColor="@color/ic_launcher_background">

            <TextView
                android:id="@+id/text_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/error"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_grid_size"
            android:layout_marginEnd="@dimen/double_grid_size"
            app:layout_constraintTop_toBottomOf="@+id/headline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_grid_size"
            android:layout_marginEnd="@dimen/double_grid_size"
            app:layout_constraintTop_toBottomOf="@+id/edit_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/double_grid_size"
            android:text="@string/test_your_force" />
    </LinearLayout>
</ScrollView>